final (i think) version. added loading screen. fixed minor bugs, changed gallery view on mobile

--- a/style/animation.css
+++ b/style/animation.css
@@ -20,6 +20,7 @@
 
 .loadingScreen__logo {
     margin-top: -20vh;
+    max-width: 100%;
 }
 
 .loader--label {
